minor text edits

--- a/_includes/machines/mining/Excavation.html
+++ b/_includes/machines/mining/Excavation.html
@@ -5,7 +5,7 @@
 				<h3>Excavation</h3>
 				<p>The powder and fine-grained regolith on the surface that can simply be scooped up is good enough for many things, with the designs adapted for that shown in previous sections, including the MIP stations, STeMP units, solar furnaces, and MRE units.</p>
 				<p> For purer minerals, at Lalande Crater there is a wealth of rocks exposed on the surface, with a variety of compositions. Some are chunks of the bedrock that was blasted sky high during the impact that created Lalande, and some of that bedrock may well have a composition that is advantageous for certain applications. For instance, some of it might be pure plagioclase, as mentioned in Glass Production. Hauling  the good rocks even 20 or 30 kilometers could well be worth it. What kinds there are around Lalande Crater will need to be mapped and catalogues.</p>
-				<p>The north pole doesn't have many rocks, as it is a far older part of the Moon. In such places fine-grain regolith has long since buried larger rock chunks, leaving them many meters under the surface. That's okay - there are other why it's good to make big, deep, steep-walled holes on the Moon than simply besides mining. That's where you are going to put your habitats.
+				<p>The north pole doesn't have many rocks, as it is a far older part of the Moon. In such places fine-grain regolith has long since buried larger rock chunks, leaving them many meters under the surface. That's okay - there are other reasons why it's good to make big, deep, steep-walled holes on the Moon than simply mining. That's where you are going to put your habitats.
 				</p>
 				<p>
 					Under the first 20 cm or so of powdery regolith (8 inches), the ground quickly becomes very hard packed. The individual particles of the soil look like shrapnel, because that is basically what they are - blast debris. Some of them are glass globules originating from ground close enough to an impacting asteroid it was all instantly melted. The molten spray of droplets cooled solid before they hit the ground. The rest is shrapnel. That seems to be why the stuff clumps so well, the jagged, oddly shaped grains sort of gnarl together. So breaking it up isn't easy. </p>
@@ -18,7 +18,12 @@
           <br><br>
 					Boring and trenching becomes a different challenge at that point. Heat diffuses through solid rock many times faster than through the regolith. The sun gun won't be very effective any more. Quite possibly the thing to do then would be to clear the regolith from a large section of bedrock, cover the area well enough to fill the space with a very thin atmosphere, and switch to conventional drills and saws. </p>
 				<p>
-					When you need to do conventional digging, the machine will need to borrow mass from elsewhere by either being anchored to a cable set in something suitably immovable, or being loaded with ballast. </p>
+					When you need to do conventional digging, machinery will need to borrow mass from elsewhere by either being anchored to a cable set in something suitably immovable, or being loaded with ballast. Otherwise, in the low gravity the force needed to dig would be more than enough to lift up the whole digger, which will look silly for a moment and then tip over. Robotic diggers will need to sense their balance well enough to brace themselves, move ballast on an arm to compensate forces correctly, and know when and where to use anchors and cables. As long as they can, they can use conventional rock ripper buckets to dig even through solid rock.<sup class="note tooltip" data-tooltip-content="#rockRipper">[?]</sup> </p>
+					<div class="tooltip_templates">
+						<span id="rockRipper">
+							<img src="img/Multi-Ripper.jpg" alt="three pronged ripper attachment for an excavator, showing two sharp points on the edge of each prong"><br>Courtesy <a href="http://www.digrock.com/">digrock.com</a>
+					</span>
+				</div>
 			</div>
 		</div>
 	</section>
