--- a/_includes/transport/tethers/EarthTether.html
+++ b/_includes/transport/tethers/EarthTether.html
@@ -9,7 +9,7 @@
                 <li>The security needed to protect an installation that starts 100 km above the Earth is much less than what is needed to protect something that reaches the ground</li>
                 <li>There is no need to deal with Earth's atmosphere, whereas a space elevator has to solve the problems of lightening strikes and the effects of weather on the cable.</li>
                 <li>The launch boost the spaceward tether can provide is more, over a shorter distance, than a space elevator can provide, because it is deeper in Earth's gravitational well.</li>
-                <li>Because satellites can be shifted over time to orbits that don't interfere with the skyhook, the demands of avoidance collision are minimal. A space elevator would always cut through all orbital elevations below geosynchronous.</li>
+                <li>Because satellites can be shifted over time to orbits that don't interfere with the skyhook, the demands of collision avoidance are minimal. A space elevator would always cut through all orbital elevations below geosynchronous.</li>
             </ul>
         </div>
     </div>
