--- a/sass/_html-styles.sass
+++ b/sass/_html-styles.sass
@@ -7,3 +7,7 @@ html
   background-size: 1600px
   @media only screen and (min-width:1350px)
     background-size: 100% auto
+  @media print
+    background-color: #fff
+    color: #000
+    background-image: transparent
