rss post, add video to index.html

--- a/_includes/mainVideos.html
+++ b/_includes/mainVideos.html
@@ -1,6 +1,8 @@
 <section class="blackDiv">
-<p>These videos show the model of Cernan's Promise as of August 2017. Work begins on updating them tomorrow, Nov 25 2017. The last video is of the model of Lalande Crater, which is highly detailed and accurate. It too will be revamped in the next 3 months.
-</p>
+  <h3>Selected Animations of the Virtual Colonies</h3>
+<div class="framewrap frame16x9">
+  <iframe src="CP-Phase1-Rebuild-Jan18.html" style="overflow-y: hidden;" scrolling="no"></iframe>
+</div>
 <div class="framewrap frame16x9">
   <iframe src="CP-Nov2017.html" style="overflow-y: hidden;" scrolling="no"></iframe>
 </div>
