project page refinements

--- a/_includes/mainVideos.html
+++ b/_includes/mainVideos.html
@@ -1,7 +1,8 @@
 <section class="blackDiv">
-  <h3>Selected Animations of the Virtual Colonies</h3>
+  <h3>Selected Videos of the Virtual Colonies</h3>
+  <br>
 <div class="framewrap frame16x9">
-  <iframe src="CP-Phase1-Rebuild-Jan18.html" style="overflow-y: hidden;" scrolling="no"></iframe>
+  <iframe src="CP-Phase1-Narrated-Walkthrough.html" style="overflow-y: hidden;" scrolling="no"></iframe>
 </div>
 <div class="framewrap frame16x9">
   <iframe src="CP-Nov2017.html" style="overflow-y: hidden;" scrolling="no"></iframe>
