--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -48,6 +48,16 @@ h3
   margin: 0
   border-bottom: 1px solid $headingColor
 
+h4
+  +align-self(flex-start)
+  color: $headingColor
+  font-weight: 300
+  font-size: 20px
+  line-height: 24px
+  padding: 15px 20px 12px 45px
+  margin: 0
+  border-bottom: 1px solid $headingColor
+
 h5
   +align-self(center)
   color: $headingColor
@@ -56,7 +66,7 @@ h5
   font-size: 18px
   padding: 4px 20px
   margin: 20px 0 5px 0
-  
+
 h6
   color: $headingColor
   background-color: $tabBkgd
