--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -8,7 +8,7 @@ layout: default
 		</div>
 		<div class="intro">
 				<h1>{{page.headline}}</h1>
-				{{page.intro | markdownify }}
+				{% if page.intro %} {{ page.intro | markdownify }} {% endif %}
 		</div>
 	</header>
 {{content}}
