new links to Verge3d app

--- a/_includes/machines/mining/solarFurnace.html
+++ b/_includes/machines/mining/solarFurnace.html
@@ -26,3 +26,16 @@
     </figcaption>
   </figure>
 </aside>
+</div>
+<section class="frameContainer" >
+ <div class="framePairTop" id="STeMP-ISRU">
+		<div class="framewrap frame16x9">
+						<iframe src="STePP.html" frameborder="0" allowfullscreen
+						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
+						</iframe>
+		</div>
+ </div>
+ <div class="framePairBottom">
+	This is a possible approach to large-scale lava production, which is needed for many purposes. It is used in production of glass materials, cast stone, and in various construction processes. It supplies many reactors with the feedstock they require, including several in following sections. It allows capture of trace gases on a bulk scale that is more efficient. Plus it produces electricity.
+ </div>
+</section>
