--- a/_includes/machines/mining/solarReactor.html
+++ b/_includes/machines/mining/solarReactor.html
@@ -22,6 +22,7 @@
     <figcaption>Reactors in which regolith is melted by focused sunlight delivered through fiber optic cables, and then reacts with a gas piped into the reactor. From <a href="https://www.lpi.usra.edu/meetings/leagilewg2008/presentations/oct29pm/Nakamura4011.pdf">Solar Thermal Power System for Oxygen Production from Lunar Regolith: Engineering System Development</a>, a presentation to the Joint Annual Meeting of LEAG, ICEUM, and SRR in 2008. Work by T. Nadamura, B. Smith, and B. Gustafson for Physical Sciences Inc and Orbital Technologies Corp.
     </figcaption>
 </aside>
+</div>
 <section class="frameContainer" id="IlmeniteReactor">
 	<div class="framePairTop">
 		<div class="framewrap frame16x9">
