--- a/_includes/machines/power/SolarThermal.html
+++ b/_includes/machines/power/SolarThermal.html
@@ -26,8 +26,8 @@
 		</figure>
 	</aside>
 </div>
-<section class="frameContainer">
- <div class="framePairTop" id="STePP">
+<section class="frameContainer" id="STeMP">
+ <div class="framePairTop">
 		<div class="framewrap frame16x9">
 						<iframe src="STePP.html" frameborder="0" allowfullscreen
 						mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
@@ -35,6 +35,6 @@
 		</div>
  </div>
  <div class="framePairBottom">
-	 This shows a single mirror unit, tank complex, Stirling engine, and radiator unit, for the sake of a clear explanation. Units placed in the colonies will have as many mirror, generator, and radiator units as the tank can support, and be scaled as large as simulations indicate would work well enough. That simulating remains to be done, but guesstimating from what we have now, this concept is a good option for units producing up to 10 MW of electricity, steadily day and night.
+	 This shows a single mirror unit, tank complex, Stirling engine, and radiator unit, for the sake of a clear explanation. Units placed in the virtual colonies will have as many mirror, generator, and radiator units as the tank can support, and be scaled as large as simulations indicate would be the best performance balance. These units are primarily for lava production, but also generate electricity.
  </div>
 </section>
