--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -67,7 +67,7 @@
 							<li><a href="machinesPower.html#Flywheels">Flywheels</a></li>
 						</ul>
 					</li>
-					<li><a href="machinesMining.html">Mining</a>
+					<li><a href="machinesMining.html">ISRU</a>
 						<ul>
 							<li><a href="machinesMining.html#Minerals">Minerals</a></li>
 							<li><a href="machinesMining.html#SolarFurnace">Solar Furnace</a></li>
