add newsletter, comments on content pages (but not Learn)

--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -3,6 +3,7 @@
 		<div id="RSS-feed">
 		{% include sigfeed.html %}
 		</div>
+		<div class="sideDiv">
 		<a href="https://www.moonwards.com/feed/rss.xml" class="plzNoHoverBackground">
 			<svg xmlns="http://www.w3.org/2000/svg" id="RSSicon"
 				viewbox="0 0 8 8" width="32" height="32">
@@ -14,6 +15,10 @@
 				</g>
 			</svg>
 		</a>
+	</div>
+	</div>
+	<div class="sideDiv">
+		{% include newsletter.html %}
 	</div>
 </aside>
 
