--- a/_layouts/content.html
+++ b/_layouts/content.html
@@ -9,6 +9,24 @@ layout: default
 		<div class="intro">
 				<h1>{{page.headline}}</h1>
 				{% if page.intro %} {{ page.intro | markdownify }} {% endif %}
-		</div>
 	</header>
 {{content}}
+</div>
+{% if page.comments %}
+	<div class="blackDiv" id="disqus_thread"></div>
+<script>
+var disqus_config = function () {
+this.page.url = 'https://www.moonwards.com/{{page.url}}';
+this.page.identifier = '{{page.identifier}}';
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+s.src = 'https://moonwards.disqus.com/embed.js';
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+{% endif %}
+</div>
