small web content changes

--- a/_includes/machines/mining/Excavation.html
+++ b/_includes/machines/mining/Excavation.html
@@ -27,3 +27,10 @@
 			</div>
 		</div>
 	</section>
+	<aside>
+	  <figure class="sideDiv">
+	    <img src="img/CrustStructure.jpg" alt="Particle sizes, components, and speed of sound in the upper 25 km of the lunar crust. Fine grain regolith is mostly in the upper 10 m on average, then a mix of rocks and hardened melt sheets for 2 km, then large stone blocks for 8 km, then bedrock with fractures for 15 km.">
+	    <figcaption>The structure of the lunar crust, on average. From <a href="https://www.lpi.usra.edu/science/kring/lunar_exploration/briefings/lunar_soil_physical_properties.pdf">Parameters of Lunar Soils</a> by David Kring.
+	    </figcaption>
+	  </figure>
+	</aside>
