--- a/_includes/machines/mining/solarFurnace.html
+++ b/_includes/machines/mining/solarFurnace.html
@@ -36,6 +36,6 @@
 		</div>
  </div>
  <div class="framePairBottom">
-	This is a possible approach to large-scale lava production, which is needed for many purposes. It is used in production of glass materials, cast stone, and in various construction processes. It supplies many reactors with the feedstock they require, including several in following sections. It allows capture of trace gases on a bulk scale that is more efficient. Plus it produces electricity.
+	This is a possible approach to large-scale lava production, which is needed for many purposes. It is used in production of glass materials, cast stone, and in various construction processes. It supplies many reactors with the feedstock they require, including several in following sections. It allows capture of trace gases on a bulk scale that is more efficient. Plus it produces electricity.<br><br>If the app doesn't load well for you, the same apparatus is shown in the video <a href="https://youtu.be/_0tuqJTfBRk">Solar Thermal Lava Production on the Moon</a>, on YouTube.
  </div>
 </section>
