--- a/_includes/machines/power/SolarThermal.html
+++ b/_includes/machines/power/SolarThermal.html
@@ -35,6 +35,6 @@
 		</div>
  </div>
  <div class="framePairBottom">
-	 This shows a single mirror unit, tank complex, Stirling engine, and radiator unit, for the sake of a clear explanation. Units placed in the virtual colonies will have as many mirror, generator, and radiator units as the tank can support, and be scaled as large as simulations indicate would be the best performance balance. These units are primarily for lava production, but also generate electricity.
+	 This shows a single mirror unit, tank complex, Stirling engine, and radiator unit, for the sake of a clear explanation. Units placed in the virtual colonies will have as many mirror, generator, and radiator units as the tank can support, and be scaled as large as simulations indicate would be the best performance balance. These units are primarily for lava production, but also generate electricity. <br><br>If the app doesn't load well for you, the same apparatus is shown in the video <a href="https://youtu.be/_0tuqJTfBRk">Solar Thermal Lava Production on the Moon</a>, on YouTube.
  </div>
 </section>
