--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,8 +1,8 @@
 	<nav>
 		<ul>
-			<li><a href="index.html" title="Where recent items appear, and a project outline">Mission</a>
+			<li><a href="index.html" title="Where recent items appear, and a project outline">Vision</a>
 				<ul>
-					<li><a href="timeline.html" title="How colony development unfolds in our virtual world">Timeline</a>
+					<li><a href="timeline.html" title="How colony development unfolds in our virtual world">Virtual Timeline</a>
 						<ul>
 							<li><a href="timeline.html#ph1-ships" title="The ships for high-volume cargo, the first skyhook, remote operations by robot, First Hab at the pole, water mining, and the International Space Agency.">Ships, Skyhook, ISA</a></li>
 							<li><a href="timeline.html#skyhookHabsRP" title="2 more skyhooks, Fetcher and Hopper ships, Long Hab, Greenhouse,  the Residence Program">Habs, Industry, RP</a></li>
