--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -22,8 +22,8 @@ h1
   color: $headingColor
   font-weight: 300
   font-style: italic
-  font-size: 24px
-  line-height: 28px
+  font-size: 26px
+  line-height: 30px
   padding: 15px 0 15px 45px
   margin: 0
   border-bottom: 2px solid $headingColor
@@ -31,8 +31,8 @@ h1
 h2
   +align-self(flex-end)
   color: $headingColor
-  font-weight: 300
-  font-size: 20px
+  font-weight: 400
+  font-size: 24px
   line-height: 24px
   padding: 15px 20px 12px 45px
   margin: 0
@@ -41,9 +41,9 @@ h2
 h3
   +align-self(flex-end)
   color: $headingColor
-  font-weight: 400
-  font-size: 18px
-  line-height: 24px
+  font-weight: 600
+  font-size: 24px
+  line-height: 30px
   padding: 15px 4vw 0 8vw
   margin: 0
   border-bottom: 1px solid $headingColor
@@ -51,9 +51,9 @@ h3
 h4
   +align-self(flex-start)
   color: $headingColor
-  font-weight: 300
-  font-size: 20px
-  line-height: 24px
+  font-weight: 400
+  font-size: 24px
+  line-height: 30px
   padding: 15px 20px 12px 45px
   margin: 0
   border-bottom: 1px solid $headingColor
@@ -62,8 +62,8 @@ h5
   +align-self(center)
   color: $headingColor
   font-weight: 400
-  line-height: 20px
-  font-size: 18px
+  line-height: 24px
+  font-size: 20px
   padding: 4px 20px
   margin: 20px 0 5px 0
 
@@ -71,7 +71,7 @@ h6
   color: $headingColor
   background-color: $tabBkgd
   display: inline
-  font-size: 1rem
+  font-size: 20px
   font-weight: 400
   padding-left: 0.2rem
   padding-right: 0.3rem
@@ -119,6 +119,10 @@ figcaption
   &:hover
     background-color: rgb(60,60,10)
     cursor: help
+
+.postindex
+  font-size: 1.1rem
+  font-weight: 300
 
 ul
   padding: 10px
