various small changes

--- a/_includes/mainVideos.html
+++ b/_includes/mainVideos.html
@@ -1,6 +1,9 @@
 <section class="blackDiv">
   <h3>Selected Videos of the Virtual Colonies</h3>
   <br>
+  <div class="framewrap frame16x9">
+    <iframe src="LalandeTownOverview.html" style="overflow-y: hidden;" scrolling="no"></iframe>
+  </div>
 <div class="framewrap frame16x9">
   <iframe src="CP-Phase1-Narrated-Walkthrough.html" style="overflow-y: hidden;" scrolling="no"></iframe>
 </div>
