--- a/_includes/timeline/ph2-RP-begins.html
+++ b/_includes/timeline/ph2-RP-begins.html
@@ -7,7 +7,7 @@
    <ul>
     <li><b>Stable Married Couples</b> - Couples only are sent, and they must be married at least 10 years, have no children under the age of 18, and both at least 40 years of age. </li>
     <li><b>Scientists and Engineers</b> - who can play an active role in studying and developing the Moon. Minimum qualification is both people in each couple have at least a bachelor's degree in a science or engineering, and one has a more advanced degree or an outstanding professional career in a relevant area.</li>
-    <li><b>Good at Shows</b> - They must participate regularly in programming broadcast back to Earth, both by appearing on camera, and by coming up with content for such programming. There are many options - arts, sports, educational content, conversational content, games. Ability in an art or a sport will be part of the criteria by which they are selected.</li>
+    <li><b>Good Presenters</b> - They must participate regularly in programming broadcast back to Earth, both by appearing on camera, and by coming up with content for such programming. There are many options - arts, sports, educational content, conversational content, games. Ability in an art or a sport will be part of the criteria by which they are selected.</li>
     <li><b>Medical Science</b> - They must donate their bodies to science upon death.</li>
     <li><b>Avoiding Pregnancy</b> - they all must have had a vasectomy or a tubal ligation</li>
     <li>They must be in excellent health</li>
