--- a/_includes/timeline/residenceProgramChart.html
+++ b/_includes/timeline/residenceProgramChart.html
@@ -74,7 +74,7 @@
  </table>
  <br>
  <div>
-Price for a residential spot when the Moon opens to the public:<h6> $250,000</h6>. Population when the opening occurs: <h6>25,600 souls</h6>. Total revenue from the Residence Program: <h6>$220 billion US</h6> Though the duration of the program could be drawn out by difficult techical hurdles, since energetic investment is being assumed, we shall estimate the whole thing is completed in <h6>30 years</h6>.
+Price for a residential spot when the Moon opens to the public:<h6> $250,000</h6>. Population when the opening occurs: <h6>25,600 souls</h6>. Total revenue from the Residence Program: <h6>$220 billion US</h6> Though the duration of the program could be drawn out by difficult technical hurdles, since energetic investment is being assumed, we shall estimate the whole thing is completed in <h6>30 years</h6>.
 </div>
 </details>
  </article>
