add assets to project.html and change layout

--- a/_includes/postnav.html
+++ b/_includes/postnav.html
@@ -1,6 +1,6 @@
 	<nav>
 		<ul>
-			<li><a href="https://www.moonwards.com/index.html" title="Where recent items appear, and a project outline">Mission</a>
+			<li><a href="https://www.moonwards.com/index.html" title="Where recent items appear, and a project outline">Vision</a>
 				<ul>
 
 					<li><a href="https://www.moonwards.com/timeline.html" title="How colony development unfolds in our virtual world">Timeline</a>
@@ -16,9 +16,9 @@
 							<li><a href="https://www.moonwards.com/timeline.html#postBoom" title="Lalande City fills with 1.5 million people living around and above a micro-managed forest dotted with lakes. Facilities are developed to make having a family easy. Society is happy and stable, but can it stay that way amidst so much change?">Post Boom...</a></li>
 						</ul>
 					</li>
-					<li><a href="https://moonwards1.blogspot.mx/" title="Core philosophy, about us, and the stuff below">Project</a>
+					<li><a href="https://moonwards.com/project.html" title="Core philosophy, about us, and the stuff below">Project</a>
 						<ul>
-							<li><a href="http://www.moonwards.com/forum/" title="Tell us what you think">Forum</a></li>
+							<li><a href="https://moonwards.com/project.html#assets" title="Get the 3d models and other assets used in Moonwards">Assets</a></li>
 							<li><a href="https://www.moonwards.com/project.html#resources" title="Lots of ways to learn about space exploration and lunar colonization">Resources</a></li>
 						</ul>
 					</li>
