--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -9,11 +9,13 @@
 							<li><a href="timeline.html#residenceProgramChart" title="Showing the population, cost, and revenue of each round, and notes on rule changes in later rounds">Residence Program Chart</a></li>
 							<li><a href="timeline.html#ph3" title="High-functioning robots and AI, allowing big interplanetary missions, fast expansion to Lalande, Lunar society fleshes out">Interplanetary, AI, Culture</a></li>
 							<li><a href="timeline.html#ph4" title="Space booms with traffic, many skyhooks across the solar system, grand projects built by robot, political power arrives in space">The City, the Planets, Power</a></li>
-							<li><a href="timeline.html#birthOfWorlds" title="A true independent civilization on the Moon, healthy colonies on Mars, Venus, Mercury, Callisto, and in O'Niell colonies">Birth of Worlds</a></li>
+							<li><a href="timeline.html#birthOfWorlds" title="A true independent civilization on the Moon, healthy colonies on Mars, Venus, Mercury, Callisto, and in O'Neill colonies">Birth of Worlds</a></li>
 						</ul>
 					</li>
 					<li><a href="project.html" title="Core philosophy, about us, and the stuff below">Project</a>
 						<ul>
+							<li><a href="project.html#models" title="Get the 3d models and other assets used in Moonwards">Assets</a></li>
+							<li><a href="project.html#assets" title="Get the 3d models and other assets used in Moonwards">Assets</a></li>
 							<li><a href="project.html#resources" title="Lots of ways to learn about space exploration and lunar colonization">Resources</a></li>
 						</ul>
 					</li>
