--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -106,6 +106,26 @@ aside
   +Radius5px
   margin: 2px
 
+.pixHeader
+  background-color: $innerBkgd
+  @media print
+    background-color: transparent
+  border-radius: 15px 15px 0 0
+  margin: 15px 15px 0 15px
+
+/* this is for a gallery where each image takes up as much room as it can without getting too big, and for images with captions.
+.pixBody
+  +display(flex)
+  +flex-flow(row wrap)
+  +align-items(center)
+  +justify-content(flex-start)
+  background-color: $innerBkgd
+  @media print
+    background-color: transparent
+  border-radius: 0 0 15px 15px
+  margin: 0 15px 15px 15px
+
+/* this is for a set of images that come with a paragraph or two after them, and they may also have captions. The layout has been tweaked for that.
 .pixWrap
   +display(flex)
   +flex-flow(row wrap)
@@ -115,32 +135,21 @@ aside
     margin: 5px
     padding: 10px
 
-.pixHeader
-  background-color: $innerBkgd
-  @media print
-    background-color: transparent
-  border-radius: 15px 15px 0 0
-  margin: 15px 15px 0 15px
-
-.pixBody
-  background-color: $innerBkgd
-  @media print
-    background-color: transparent
-  border-radius: 0 0 15px 15px
-  +display(flex)
-  +flex-flow(row wrap)
-  +align-items(center)
-  margin: 0 15px 15px 15px
-
+/* pix is for a div wrapping images that go within pixBody or pixWrap.
 .pix
   margin: 15px
-  +flex(auto)
-  +align-items(center)
   border: 1px solid $darkAccent
+  flex: auto
   img
     width: 100%
     height: auto
 
+/* this is just to prevent the last image in pixBody or pixWrap filling a whole row and looking bad becausae the image is too small for the space. it's a bit hacky and may stop working.
+.empty-filler
+  width: 425px
+  height: 0
+
+/* this is for a set of loosely organized images, no text
 div .gallery
   +flex(auto)
   width: 500px
@@ -155,6 +164,21 @@ div .gallery
   img
     width: 90%
     height: auto
+
+.overlay
+  border: 5px solid transparent
+  border-width: 3px
+  border-radius: 3px
+  max-width: 98%
+  max-height: 97%
+  margin-top: -3px
+
+.overlay:hover
+  border-width: 3px
+  border-style: solid
+  border-color: rgb(255,200,0)
+  border-radius: 3px
+
 
 .thumbs
   padding: 10px
