--- a/sass/_html-styles.sass
+++ b/sass/_html-styles.sass
@@ -8,6 +8,6 @@ html
   @media only screen and (min-width:1350px)
     background-size: 100% auto
   @media print
-    background-color: #fff
+    background-color: #FFF
     color: #000
     background-image: transparent
