--- a/_includes/downloads.html
+++ b/_includes/downloads.html
@@ -1,4 +1,4 @@
-<h1>Models and Assets of the Virtual Settlements</h1>
+<h1 id="assets">Models and Assets of the Virtual Settlements</h1>
 <p>If you click a model or asset below it will download to your computer. Please take note of the size of the files, shown under each image. A few of them are very large.</p>
 <p>This page is updated periodically with new versions and more items. Some of these models are still at the conceptual stage and as such are only rough drafts. Most are being actively worked on and are likely to change a great deal. If you have any technical issues with any item below, please email kim@moonwards.com.</p>
 <p>Note: You must use a browser other than Internet Explorer in order to download these files. (And anyhow, um, you really should be using a different browser.)</p>
@@ -6,70 +6,70 @@
 <div class="pixBody" id="models">
   <div class="pix" style="width: 180px;">
     <a href="downloads/AtriumHabMaster.blend" download><img class="overlay" src="img/DL-thumb/atrium-hab.jpg"></a>
-    <p>Cernan's Promise Settlement, including Lalande Crater, most habs, and factories - 22 MB</p>
+    <p>The first Atrium Hab - 2.4 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/CernansPromise-Phase-1.blend" download><img class="overlay" src="img/DL-thumb/cernans-promise.jpg"></a>
-    <p>Cernan's Promise Settlement, including Lalande Crater, most habs, and factories - 22 MB</p>
+    <a href="downloads/CernansPromise-Phase1-All15-AllPacked.blend" download><img class="overlay" src="img/DL-thumb/CP-Aug2018.jpg"></a>
+    <p>Cernan's Promise Settlement and Environs, including Lalande Crater, all habitats, and just everything 75 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/Gagarin.blend" download></a><img class="overlay" src="img/DL-thumb/gagarin.jpg"></a>
+    <a href="downloads/Gagarin.blend" download><img class="overlay" src="img/DL-thumb/gagarin.jpg"></a>
     <p>Gagarin Anchor Station - 4.8 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/LalandeCity.blend" download></a><img class="overlay" src="img/DL-thumb/lalande-city.jpg"></a>
+    <a href="downloads/LalandeCity.blend" download><img class="overlay" src="img/DL-thumb/lalande-city.jpg"></a>
     <p>Lalande City - 23.8 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/Light-Tube-Straight.blend" download></a><img class="overlay" src="img/DL-thumb/lighttube.jpg"></a>
+    <a href="downloads/Light-Tube-Straight.blend" download><img class="overlay" src="img/DL-thumb/lighttube.jpg"></a>
     <p>Light Tube (funnels sunlight into the habs) - 908 KB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/NuclearCore.blend" download></a><img class="overlay" src="img/DL-thumb/nuclear-core.jpg"></a>
+    <a href="downloads/NuclearCore.blend" download><img class="overlay" src="img/DL-thumb/nuclear-core.jpg"></a>
     <p>Nuclear Reactor - 572 KB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/Parabolic-Mirrors-4-Units.blend" download></a><img class="overlay" src="img/DL-thumb/mirror-unit.jpg"></a>
+    <a href="downloads/Parabolic-Mirrors-4-Units.blend" download><img class="overlay" src="img/DL-thumb/mirror-unit.jpg"></a>
     <p>Solar Thermal Mirror Unit - 685 KB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/PolarHab.blend" download></a><img class="overlay" src="img/DL-thumb/polar-hab.jpg"></a>
+    <a href="downloads/PolarHab.blend" download><img class="overlay" src="img/DL-thumb/polar-hab.jpg"></a>
     <p>First Polar Hab at Inukshuk Settlement - 685 KB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/Rad-Unit-Rotating-Shielded.blend" download></a><img class="overlay" src="img/DL-thumb/rotating-radiator.jpg"></a>
+    <a href="downloads/Rad-Unit-Rotating-Shielded.blend" download><img class="overlay" src="img/DL-thumb/rotating-radiator.jpg"></a>
     <p>Rotating Shielded Radiator Unit - 1.2 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/STEMP-Unit.blend" download></a><img  class="overlay" src="img/DL-thumb/solar-thermal-melter.jpg"></a>
+    <a href="downloads/STEMP-Unit.blend" download><img  class="overlay" src="img/DL-thumb/solar-thermal-melter.jpg"></a>
     <p>Solar Thermal Melter - 3.6 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/Stirling-FreePiston.blend" download></a><img class="overlay" src="img/DL-thumb/stirling-freepiston.jpg"></a>
+    <a href="downloads/Stirling-FreePiston.blend" download><img class="overlay" src="img/DL-thumb/stirling-freepiston.jpg"></a>
     <p>Free Piston Stirling Engine (much like what might actually be used) - 1.1 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/StirlingDemo-Animated.blend" download></a><img class="overlay" src="img/DL-thumb/stirling-demo.jpg"></a>
+    <a href="downloads/StirlingDemo-Animated.blend" download><img class="overlay" src="img/DL-thumb/stirling-demo.jpg"></a>
     <p>Demonstration Stirling Engine (to explain the principal) - 1.7 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/TetherClimber.blend" download></a><img class="overlay" src="img/DL-thumb/tether-climber.jpg"></a>
+    <a href="downloads/TetherClimber.blend" download><img class="overlay" src="img/DL-thumb/tether-climber.jpg"></a>
     <p>Skyhook Lower Cable Climber - 824 KB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/Tube-Hab-Long.blend" download></a><img class="overlay" src="img/DL-thumb/tube-hab-long.jpg"></a>
+    <a href="downloads/Tube-Hab-Long.blend" download><img class="overlay" src="img/DL-thumb/tube-hab-long.jpg"></a>
     <p>Tubular Habitat - Long - 605 KB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/Tube-Hab.blend" download></a><img class="overlay" src="img/DL-thumb/tube-hab-short.jpg"></a>
+    <a href="downloads/Tube-Hab.blend" download><img class="overlay" src="img/DL-thumb/tube-hab-short.jpg"></a>
     <p>Tubular Habitat - Short - 553 KB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/Window-Hexpane.blend" download></a><img class="overlay" src="img/DL-thumb/hex-window.jpg"></a>
+    <a href="downloads/Window-Hexpane.blend" download><img class="overlay" src="img/DL-thumb/hex-window.jpg"></a>
     <p>Hexagonal Windows - 2.5 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a href="downloads/toilet.blend" download></a><img class="overlay" src="img/DL-thumb/toilet.jpg"></a>
+    <a href="downloads/toilet.blend" download><img class="overlay" src="img/DL-thumb/toilet.jpg"></a>
     <p>Moon Toilet - 903 KB</p>
   </div>
   <div class="empty-filler" style="width: 180px;">
@@ -77,7 +77,7 @@
   <div class="empty-filler" style="width: 180px;">
   </div>
 </div>
-<h4 id="assets">Other Assets</h4>
+<h4>Other Assets</h4>
 <h5>Height Maps<sup class="note tooltip" data-tooltip-content="#heightmap">
 [?]</sup> of the Moon</h5>
 <div class="tooltip_templates">
@@ -398,19 +398,19 @@ Height maps are used in 3d software to create terrain. The dark spots in the hei
 <h5>Sculpting References for Lalande Crater<h5>
 <div class="pixBody">
   <div class="pix" style="width: 180px;">
-    <a target="top" href="img/Apollo14.jpg"><img src="img/Apollo14.jpg"></a>
+    <a target="top" href="img/Apollo14.jpg"><img src="img/Apollo14-small.jpg"></a>
     <p>From Apollo 14 - 1.4 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a target="top" href="img/AS16-P-5401_LalandeRegionQ35.jpg"><img src="img/AS16-P-5401_LalandeRegionQ35.jpg"></a>
+    <a target="top" href="img/AS16-P-5401_LalandeRegionQ35.jpg"><img src="img/AS16-P-5401_LalandeRegionQ35-Small.jpg"></a>
     <p>From Apollo 16 (Shot 1) - 1.3 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a target="top" href="img/Apollo16view-from-south-Q35.jpg"><img src="img/Apollo16view-from-south-Q35.jpg"></a>
+    <a target="top" href="img/Apollo16view-from-south-Q35.jpg"><img src="img/Apollo16view-from-south-Q35-Small.jpg"></a>
     <p>From Apollo 16 (Shot 2) - 1.3 MB</p>
   </div>
   <div class="pix" style="width: 180px;">
-    <a target="top" href="img/LalandeShapeReferenceQ35.jpg"><img src="img/LalandeShapeReferenceQ35.jpg"></a>
+    <a target="top" href="img/LalandeShapeReferenceQ35.jpg"><img src="img/LalandeShapeReferenceQ35-Small.jpg"></a>
     <p>From <a href="https://quickmap.lroc.asu.edu">QuickMap</a> (Montage) - 1.3 MB</p>
   </div>
 </div>
