updating resources.html page

--- a/_includes/downloads.html
+++ b/_includes/downloads.html
@@ -1,83 +1,13 @@
-<h1 id="assets">Models and Assets of the Virtual Settlements</h1>
-<p>If you click a model or asset below it will download to your computer. Please take note of the size of the files, shown under each image. A few of them are very large.</p>
-<p>This page is updated periodically with new versions and more items. Some of these models are still at the conceptual stage and as such are only rough drafts. Most are being actively worked on and are likely to change a great deal. If you have any technical issues with any item below, please email kim@moonwards.com.</p>
-<p>Note: You must use a browser other than Internet Explorer in order to download these files. (And anyhow, um, you really should be using a different browser.)</p>
-<h4>Blender 3d models and scenes</h4>
-<div class="pixBody" id="models">
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/AtriumHabMaster.blend" download><img class="overlay" src="img/DL-thumb/atrium-hab.jpg"></a>
-    <p>The first Atrium Hab - 2.4 MB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/CernansPromise-Phase1-All15-AllPacked.blend" download><img class="overlay" src="img/DL-thumb/CP-Aug2018.jpg"></a>
-    <p>Cernan's Promise Settlement and Environs, including Lalande Crater, all habitats, and just everything 75 MB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/Gagarin.blend" download><img class="overlay" src="img/DL-thumb/gagarin.jpg"></a>
-    <p>Gagarin Anchor Station - 4.8 MB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/LalandeCity.blend" download><img class="overlay" src="img/DL-thumb/lalande-city.jpg"></a>
-    <p>Lalande City - 23.8 MB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/Light-Tube-Straight.blend" download><img class="overlay" src="img/DL-thumb/lighttube.jpg"></a>
-    <p>Light Tube (funnels sunlight into the habs) - 908 KB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/NuclearCore.blend" download><img class="overlay" src="img/DL-thumb/nuclear-core.jpg"></a>
-    <p>Nuclear Reactor - 572 KB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/Parabolic-Mirrors-4-Units.blend" download><img class="overlay" src="img/DL-thumb/mirror-unit.jpg"></a>
-    <p>Solar Thermal Mirror Unit - 685 KB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/PolarHab.blend" download><img class="overlay" src="img/DL-thumb/polar-hab.jpg"></a>
-    <p>First Polar Hab at Inukshuk Settlement - 685 KB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/Rad-Unit-Rotating-Shielded.blend" download><img class="overlay" src="img/DL-thumb/rotating-radiator.jpg"></a>
-    <p>Rotating Shielded Radiator Unit - 1.2 MB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/STEMP-Unit.blend" download><img  class="overlay" src="img/DL-thumb/solar-thermal-melter.jpg"></a>
-    <p>Solar Thermal Melter - 3.6 MB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/Stirling-FreePiston.blend" download><img class="overlay" src="img/DL-thumb/stirling-freepiston.jpg"></a>
-    <p>Free Piston Stirling Engine (much like what might actually be used) - 1.1 MB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/StirlingDemo-Animated.blend" download><img class="overlay" src="img/DL-thumb/stirling-demo.jpg"></a>
-    <p>Demonstration Stirling Engine (to explain the principal) - 1.7 MB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/TetherClimber.blend" download><img class="overlay" src="img/DL-thumb/tether-climber.jpg"></a>
-    <p>Skyhook Lower Cable Climber - 824 KB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/Tube-Hab-Long.blend" download><img class="overlay" src="img/DL-thumb/tube-hab-long.jpg"></a>
-    <p>Tubular Habitat - Long - 605 KB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/Tube-Hab.blend" download><img class="overlay" src="img/DL-thumb/tube-hab-short.jpg"></a>
-    <p>Tubular Habitat - Short - 553 KB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/Window-Hexpane.blend" download><img class="overlay" src="img/DL-thumb/hex-window.jpg"></a>
-    <p>Hexagonal Windows - 2.5 MB</p>
-  </div>
-  <div class="pix" style="width: 180px;">
-    <a href="downloads/toilet.blend" download><img class="overlay" src="img/DL-thumb/toilet.jpg"></a>
-    <p>Moon Toilet - 903 KB</p>
-  </div>
-  <div class="empty-filler" style="width: 180px;">
-  </div>
-  <div class="empty-filler" style="width: 180px;">
-  </div>
-</div>
-<h4>Other Assets</h4>
+<h1>Resource Libraries</h1>
+<p>To work on, or use, our 3d assets or code, go to the relevant GitHub repository:</p>
+<h6><a href="https://github.com/briligg/moonwards">Moonwards</a></h6>
+<p>Design, functionality and apps on the website. Content for embedding as added media in the virtual colonies. Work on anything that is the public face of Moonwards outside the virtual world.</p>
+<h6><a href="https://github.com/briligg/Moonwards-Blender">Moonwards-Blender</a></h6>
+<p>All the 3d models of the project, which are made in Blender. For those who would like purely the colony of Cernan's Promise in a stand-alone format, download one of these zip files:</p>
+  <ul>
+    <li><a href="https://www.moonwards.com/downloads/CernansPromise-BlenderBranch.zip">Version for development in Blender</a></li>
+    <li><a href="https://www.moonwards.com/downloads/CernansPromise-GodotBranch.zip">Version for export to Godot</a></li>
+    </ul>
 <h5>Height Maps<sup class="note tooltip" data-tooltip-content="#heightmap">
 [?]</sup> of the Moon</h5>
 <div class="tooltip_templates">
