--- a/_includes/resources.html
+++ b/_includes/resources.html
@@ -1,8 +1,8 @@
-<h1>Resources in Building Moonwards</h1>
-<p>There are many tools, services and information sources involved in a project such as this. Would you perhaps like to check out some of them?</p>
+<h1>Software and Learning</h1>
+<p>The following software are used to create the virtual colonies and this website. All are open source, Moonwards uses only open source wherever possible. The software can be downloaded at the links.</p>
 <h4>Software</h4>
 <ul>
-	<li><a href="https://www.blender.org/">Blender</a> 3D graphics program, which was used to create all the models.
+	<li><a href="https://www.blender.org/">Blender</a> 3D graphics program
 	<ul>
 		<li>The Blender foundation maintains a collection of <a href="https://www.blender.org/support/tutorials/">top tutorials on Blender</a>.</li>
 		<li>The <a href="https://blender.stackexchange.com/">Blender Stack Exchange</a> is a great place to ask the questions that come up as you learn Blender. The community also curates a list of resources of all kinds for Blender, found <a href="https://blender.stackexchange.com/questions/15355/resources-for-blender">here</a>.
@@ -10,13 +10,14 @@
 	</ul>
 		</li>
 	<li><a href="http://armory3d.org/">Armory</a> game engine, which runs completely within Blender itself.</li>
-	<li><a href="https://godotengine.org/">Godot</a> game engine, a full-featured engine. There is talk of the Blender Foundation working with both the Armory people and the Godot people to integrate Blender development with their products.
+	<li><a href="https://godotengine.org/">Godot</a> game engine, a full-featured engine.
 	<li><a href="https://www.geogebra.org/">GeoGebra</a> Interactive mathematical apps, which are used to demonstrate orbital mechanics.</li>
   <li><a href="https://jekyllrb.com/docs/home/">Jekyll</a>, a static site generator, which was used to create this website.</li>
-  <li><a href="https://atom.io/">Atom Editor</a>, a hackable text editor with lots of tools that assist in coding. (Sigvart, however, swears by <a href="https://wiki.gnome.org/Apps/Gedit">Gedit</a>)</li>
+  <li><a href="https://atom.io/">Atom Editor</a>, a 'hackable' text editor with lots of available plug-ins.</li>
+	<li> <a href="https://wiki.gnome.org/Apps/Gedit">Gedit</a>), a cleaner text editor, also with lots of plug-ins available.</li>
 </ul>
-<p>All of the above programs are open source. Moonwards uses only open source resources wherever possible.</p>
-<p>If you are interested in learning in depth about the science and engineering of space exploration, try going here:</p>
+
+
 <h1>Learning about Space Exploration</h1>
 <h4>Websites</h4>
 <ul>
