update project page

--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -32,7 +32,7 @@ section.calc
   +flex(1 1 900px)
 
 aside
-  +flex(1 1 400px)
+  +flex(1 1 300px)
   +display(flex)
   +flex-flow(column nowrap)
   +justify-content(flex-start)
@@ -176,7 +176,7 @@ div .gallery
 .overlay:hover
   border-width: 3px
   border-style: solid
-  border-color: rgb(255,200,0)
+  border-color: $linx
   border-radius: 3px
 
 
