--- a/_includes/downloads.html
+++ b/_includes/downloads.html
@@ -1,13 +1,23 @@
+<div class="pixBody">
 <h1>Resource Libraries</h1>
 <p>To work on, or use, our 3d assets or code, go to the relevant GitHub repository:</p>
-<h6><a href="https://github.com/briligg/moonwards">Moonwards</a></h6>
+<div class="pix" style="width: 300px;">
+<a href="https://github.com/briligg/moonwards"><img class="overlay" src="img/website-promo.jpg">
+<h6>Moonwards</h6></a>
 <p>Design, functionality and apps on the website. Content for embedding as added media in the virtual colonies. Work on anything that is the public face of Moonwards outside the virtual world.</p>
-<h6><a href="https://github.com/briligg/Moonwards-Blender">Moonwards-Blender</a></h6>
-<p>All the 3d models of the project, which are made in Blender. For those who would like purely the colony of Cernan's Promise in a stand-alone format, download one of these zip files:</p>
-  <ul>
+</div>
+<div class="pix" style="width: 300px;">
+  <a href="https://github.com/briligg/Moonwards-Blender"><img class="overlay" src="img/AtriumHabOutside550.jpg">
+<h6> Moonwards-Blender</h6></a>
+<p>All the 3d models of the project, which are made in Blender.</p>
+<p>
+  For those who would like purely the colony of Cernan's Promise in a stand-alone format, download one of these zip files:</p>
+  <ul style="margin-left: 15px;">
     <li><a href="https://www.moonwards.com/downloads/CernansPromise-BlenderBranch.zip">Version for development in Blender</a></li>
     <li><a href="https://www.moonwards.com/downloads/CernansPromise-GodotBranch.zip">Version for export to Godot</a></li>
     </ul>
+</div>
+
 <h5>Height Maps<sup class="note tooltip" data-tooltip-content="#heightmap">
 [?]</sup> of the Moon</h5>
 <div class="tooltip_templates">
@@ -19,7 +29,7 @@ Height maps are used in 3d software to create terrain. The dark spots in the hei
 <div class="pixBody">
   <div class="pix" style="width: 180px;">
     <a href="downloads/MoonHM-LOLA-8-65536.png" download><img class="overlay" src="img/DL-thumb/LOLA-Heightmap.jpg"></a>
-    <p>High Resolution Height Map of the Moon<sup class="note tooltip" data-tooltip-content="#MoonHM-1">[?]</sup>, 65,536 x 32,768 px - 146 MB. Take note of file size.</p>
+    <p>High Resolution Height Map of the Moon<sup class="note tooltip" data-tooltip-content="#MoonHM-1">[?]</sup>, 65,536 x 32,768 px - 146 MB.</p>
   </div>
   <div class="tooltip_templates">
   <p id="MoonHM-1">
