start putting app download on landing page

--- a/_includes/downloads.html
+++ b/_includes/downloads.html
@@ -17,6 +17,7 @@
     <li><a href="https://www.moonwards.com/downloads/CernansPromise-GodotBranch.zip">Version for export to Godot</a></li>
     </ul>
 </div>
+</div>
 
 <h5>Height Maps<sup class="note tooltip" data-tooltip-content="#heightmap">
 [?]</sup> of the Moon</h5>
