fix img to resize

--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -139,7 +139,7 @@ aside
 .pix
   margin: 15px
   border: 1px solid $darkAccent
-  flex: auto
+  flex: 1 1 auto
   img
     width: 100%
     height: auto
