add app downloads

--- a/_includes/downloads.html
+++ b/_includes/downloads.html
@@ -1,5 +1,5 @@
 <div class="pixBody">
-<h1>Resource Libraries</h1>
+<h1 id="Assets">Resource Libraries</h1>
 <p>To work on, or use, our 3d assets or code, go to the relevant GitHub repository:</p>
 <div class="pix" style="width: 300px;">
 <a href="https://github.com/briligg/moonwards"><img class="overlay" src="img/website-promo.jpg">
@@ -13,8 +13,8 @@
 <p>
   For those who would like purely the colony of Cernan's Promise in a stand-alone format, download one of these zip files:</p>
   <ul style="margin-left: 15px;">
-    <li><a href="https://www.moonwards.com/downloads/CernansPromise-BlenderBranch.zip">Version for development in Blender</a></li>
-    <li><a href="https://www.moonwards.com/downloads/CernansPromise-GodotBranch.zip">Version for export to Godot</a></li>
+    <li><a href="https://www.moonwards.com/downloads/CernansPromise-BlenderBranch.zip" download>Version for development in Blender</a></li>
+    <li><a href="https://www.moonwards.com/downloads/CernansPromise-GodotBranch.zip" download>Version for export to Godot</a></li>
     </ul>
 </div>
 </div>
