--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -2,6 +2,14 @@
 		<ul>
 			<li><a href="index.html" title="Where recent items appear, and a project outline">Vision</a>
 				<ul>
+
+					<li><a href="project.html" title="Core philosophy, about us, and the stuff below">Project</a>
+						<ul>
+							<li><a href="apps.html">Initial Colony App</a></li>
+							<li><a href="project.html#assets" title="Get the 3d models and other assets used in Moonwards">Assets</a></li>
+							<li><a href="project.html#resources" title="Lots of ways to learn about space exploration and lunar colonization">Resources</a></li>
+						</ul>
+					</li>
 					<li><a href="timeline.html" title="How colony development unfolds in our virtual world">Virtual Timeline</a>
 						<ul>
 							<li><a href="timeline.html#ph1-ships" title="The ships for high-volume cargo, the first skyhook, remote operations by robot, First Hab at the pole, water mining, and the International Space Agency.">Ships, Skyhook, ISA</a></li>
@@ -10,13 +18,6 @@
 							<li><a href="timeline.html#ph3" title="High-functioning robots and AI, allowing big interplanetary missions, fast expansion to Lalande, Lunar society fleshes out">Interplanetary, AI, Culture</a></li>
 							<li><a href="timeline.html#ph4" title="Space booms with traffic, many skyhooks across the solar system, grand projects built by robot, political power arrives in space">The City, the Planets, Power</a></li>
 							<li><a href="timeline.html#birthOfWorlds" title="A true independent civilization on the Moon, healthy colonies on Mars, Venus, Mercury, Callisto, and in O'Neill colonies">Birth of Worlds</a></li>
-						</ul>
-					</li>
-					<li><a href="project.html" title="Core philosophy, about us, and the stuff below">Project</a>
-						<ul>
-							<li><a href="project.html#models" title="Get the 3d models and other assets used in Moonwards">Assets</a></li>
-							<li><a href="project.html#assets" title="Get the 3d models and other assets used in Moonwards">Assets</a></li>
-							<li><a href="project.html#resources" title="Lots of ways to learn about space exploration and lunar colonization">Resources</a></li>
 						</ul>
 					</li>
 				</ul>
