--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -10,6 +10,7 @@ a
     color: $aVisited
   &:hover
     background-color: $aHoverBk
+    color: $navAHover
   &:active
     background-color: $aHoverBk
 
