artifacts of system change

--- a/_includes/headerMain.html
+++ b/_includes/headerMain.html
@@ -1,4 +1,4 @@
 	<header>
-	<img src="img/MWLogo-for-black-bckgnd.svg" alt="Moonwards" id="Logo">
+	<img src="img/MoonwardsLogo2018.svg" alt="Moonwards" id="Logo">
 		<p id="note">What if a group of nations was determined to colonize the Moon, and they based their decisions only on technical and economic merit?</p>
 	</header>
