--- a/sass/_contentHeader.sass
+++ b/sass/_contentHeader.sass
@@ -7,8 +7,8 @@ header
   width: 100%
 
 #Logo
-  +flex(1.5 1 250px)
-  padding: 1.5rem 3rem 4.5rem 3rem
+  +flex(0 1 250px)
+  padding: 0.5rem
 
 .intro
   +flex(3 1 30%)
