update postnav, minor changes

--- a/_layouts/toolTemplate.html
+++ b/_layouts/toolTemplate.html
@@ -4,7 +4,7 @@
 		<title>{{page.title}}</title>
 		{%include commonHeadElements.html%}
 		<script src="js/planets.js"></script>
-		<link rel="stylesheet" href="css/nav.nest.sass.css">
+		<link rel="stylesheet" href="css/nav.css">
 		<style>
 body{
 	font-family:Arial,Helvetica,sans-serif;
