--- a/_includes/postnav.html
+++ b/_includes/postnav.html
@@ -3,23 +3,21 @@
 			<li><a href="https://www.moonwards.com/index.html" title="Where recent items appear, and a project outline">Vision</a>
 				<ul>
 
-					<li><a href="https://www.moonwards.com/timeline.html" title="How colony development unfolds in our virtual world">Timeline</a>
+					<li><a href="https://www.moonwards.com/project.html" title="Core philosophy, about us, and the stuff below">Project</a>
 						<ul>
-							<li><a href="https://www.moonwards.com/timeline.html#shipsRobotsISA" title="The ships for high-volume cargo, the robots for large-scale construction by tele-operation, and the International Space Agency.">Ships, Robots, ISA</a></li>
-							<li><a href="https://www.moonwards.com/timeline.html#skyhookHabsRP" title="Vertical Skyhook slashes fuel needs, First Hab at Inukshuk, Sagan Space Station, and the rules of the Residence Program">Skyhook, Habs, RP</a></li>
-							<li><a href="https://www.moonwards.com/timeline.html#residenceProgramChart" title="Showing the population, cost, and revenue of each round, and notes on rule changes in later rounds">Residence Program Chart</a></li>
-							<li><a href="https://www.moonwards.com/timeline.html#inukshukRP1" title="The equatorial skyhook is built, all the work at Inukshuk Base, and how 250 people living on the Moon spend their time and stay healthy.">250 Astronauts</a></li>
-							<li><a href="https://www.moonwards.com/timeline.html#3baseRP2-4" title="Gagarin Station shipyard and manufacturing, construction of Cernan's Promise infrastructure, and 3200 people begin to be a society.">3 Bases 3200 People</a></li>
-							<li><a href="https://www.moonwards.com/timeline.html#RPround5" title="Lunar skyhook system complete, coil gun use, LEO skyhook underway, Cernan's Promise becomes a town full of homes, farms, factories, community spaces, bustle, and life. ">Exponential Growth</a></li>
-							<li><a href="https://www.moonwards.com/timeline.html#RProunds6-7" title="LEO skyhook transforms access to space, Lalande City is built by autonomous robots and a few human directors, The Residence Program completes, there is a currency, a justice system, a constitution, and they start having kids.">Explosive Growth</a></li>
-							<li><a href="https://www.moonwards.com/timeline.html#spaceBoom" title="The capacity to transport people or cargo around cis-lunar space, and to build almost anything with robots that require only minimal direction, has grown so much that almost any project ever proposed is now possible. Activity in space just goes BOOM.">BOOM!</a></li>
-							<li><a href="https://www.moonwards.com/timeline.html#postBoom" title="Lalande City fills with 1.5 million people living around and above a micro-managed forest dotted with lakes. Facilities are developed to make having a family easy. Society is happy and stable, but can it stay that way amidst so much change?">Post Boom...</a></li>
+							<li><a href="https://www.moonwards.com/apps.html">Initial Colony App</a></li>
+							<li><a href="https://www.moonwards.com/project.html#assets" title="Get the 3d models and other assets used in Moonwards">Assets</a></li>
+							<li><a href="https://www.moonwards.com/project.html#resources" title="Lots of ways to learn about space exploration and lunar colonization">Resources</a></li>
 						</ul>
 					</li>
-					<li><a href="https://moonwards.com/project.html" title="Core philosophy, about us, and the stuff below">Project</a>
+					<li><a href="https://www.moonwards.com/timeline.html" title="How colony development unfolds in our virtual world">Virtual Timeline</a>
 						<ul>
-							<li><a href="https://moonwards.com/project.html#assets" title="Get the 3d models and other assets used in Moonwards">Assets</a></li>
-							<li><a href="https://www.moonwards.com/project.html#resources" title="Lots of ways to learn about space exploration and lunar colonization">Resources</a></li>
+							<li><a href="https://www.moonwards.com/timeline.html#ph1-ships" title="The ships for high-volume cargo, the first skyhook, remote operations by robot, First Hab at the pole, water mining, and the International Space Agency.">Ships, Skyhook, ISA</a></li>
+							<li><a href="https://www.moonwards.com/timeline.html#skyhookHabsRP" title="2 more skyhooks, Fetcher and Hopper ships, Long Hab, Greenhouse,  the Residence Program">Habs, Industry, RP</a></li>
+							<li><a href="https://www.moonwards.com/timeline.html#residenceProgramChart" title="Showing the population, cost, and revenue of each round, and notes on rule changes in later rounds">Residence Program Chart</a></li>
+							<li><a href="https://www.moonwards.com/timeline.html#ph3" title="High-functioning robots and AI, allowing big interplanetary missions, fast expansion to Lalande, Lunar society fleshes out">Interplanetary, AI, Culture</a></li>
+							<li><a href="https://www.moonwards.com/timeline.html#ph4" title="Space booms with traffic, many skyhooks across the solar system, grand projects built by robot, political power arrives in space">The City, the Planets, Power</a></li>
+							<li><a href="https://www.moonwards.com/timeline.html#birthOfWorlds" title="A true independent civilization on the Moon, healthy colonies on Mars, Venus, Mercury, Callisto, and in O'Neill colonies">Birth of Worlds</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -32,7 +30,7 @@
 								<ul>
 									<li><a href="https://www.moonwards.com/lalande.html#LalSoilTemp">Rockiness</a></li>
 									<li><a href="https://www.moonwards.com/lalande.html#thorium">Thorium</a></li>
-									<li><a href="https://www.moonwards.com/project.html#resources">Crater Model</a></li>
+									<li><a href="https://www.moonwards.com/lalande.html#CraterModel">Crater Model</a></li>
 								</ul>
 							</li>
 						</ul>
@@ -63,24 +61,32 @@
 							<li><a href="https://www.moonwards.com/machines.html#HangarsOverview">Hangars</a></li>
 						</ul>
 					</li>
-					<li><a href="https://www.moonwards.com/machines2.html#power">Power</a>
+					<li><a href="https://www.moonwards.com/machinesPower.html">Power</a>
 						<ul>
-							<li><a href="https://www.moonwards.com/machines2.html#TESS">Solar Thermal</a></li>
-							<li><a href="https://www.moonwards.com/machines2.html#nuclearReactors">Nuclear Reactors</a></li>
+							<li><a href="https://www.moonwards.com/machinesPower.html#SolarThermal">Solar Thermal</a></li>
+							<li><a href="https://www.moonwards.com/machinesPower.htmlNnuclearReactors">Nuclear Reactors</a></li>
+							<li><a href="https://www.moonwards.com/machinesPower.html#SolarPV">Solar Photovoltaic</a></li>
+							<li><a href="https://www.moonwards.com/machinesPower.html#SpaceSolar">Beamed Solar</a></li>
+							<li><a href="https://www.moonwards.com/machinesPower.html#Flywheels">Flywheels</a></li>
 						</ul>
 					</li>
-					<li><a href="https://www.moonwards.com/machines2.html#mining">Mining</a>
+					<li><a href="https://www.moonwards.com/machinesMining.html">ISRU</a>
 						<ul>
-							<li><a href="https://www.moonwards.com/machines2.html#Minerals">Minerals</a></li>
-							<li><a href="https://www.moonwards.com/machines2.html#Refining">Refining</a></li>
-							<li><a href="https://www.moonwards.com/machines2.html#Excavation">Excavation</a></li>
+							<li><a href="https://www.moonwards.com/machinesMining.html#Minerals">Minerals</a></li>
+							<li><a href="https://www.moonwards.com/machinesMining.html#SolarFurnace">Solar Furnace</a></li>
+							<li><a href="https://www.moonwards.com/machinesMining.html#SolarReactor">Solar Reactor</a></li>
+							<li><a href="https://www.moonwards.com/machinesMining.html#MoltenElectrolysis">Molten Regolith Electrolysis</a></li>
+							<li><a href="https://www.moonwards.com/machinesMining.html#DustRoaster">Deflected Plasmas</a></li>
+							<li><a href="https://www.moonwards.com/machinesMining.html#Glass">Glass Production</a></li>
+							<li><a href="https://www.moonwards.com/machinesMining.html#Excavation">Excavation</a></li>
 						</ul>
 					</li>
-					<li><a href="https://www.moonwards.com/machines2.html#transport">Transport</a>
+					<li><a href="https://www.moonwards.com/machinesTransport.html">Transport</a>
 						<ul>
-							<li><a href="https://www.moonwards.com/machines2.html#nuclearShuttles">Nuclear Shuttles</a></li>
-							<li><a href="https://www.moonwards.com/machines2.html#PodShip">Pod ship</a></li>
-							<li><a href="https://www.moonwards.com/machines2.html#TetherTransport">Vertical Tethers</a></li>
+							<li><a href="https://www.moonwards.com/machinesTransport.html#nuclearShuttles">Nuclear Shuttles</a></li>
+							<li><a href="https://www.moonwards.com/machinesTransport.html#PodShip">Pod Ships</a></li>
+							<li><a href="https://www.moonwards.com/machinesTransport.html#ionDrive">IonDrives </a></li>
+							<li><a href="https://www.moonwards.com/skyhooks.html">Skyhooks</a></li>
 						</ul>
 					</li>
 				</ul>
@@ -89,7 +95,7 @@
 				<ul>
 					<li><a href="https://www.moonwards.com/learn.html#tryit">Try It</a>
 						<ul>
-							<li><a href="https://www.moonwards.com/learn.html#tryit">Pellet Simulator</a></li>
+							<li><a href="https://www.moonwards.com/learn.html#PelletSim">Pellet Simulator</a></li>
 							<li><a href="https://www.moonwards.com/learn.html#TetherTool">Tether Tool</a></li>
 							<li><a href="https://www.moonwards.com/learn.html#SuborbitalHop">Suborbital Hop</a></li>
 							<li><a href="https://www.moonwards.com/learn.html#LunarElevator">Lunar Elevator</a></li>
