--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@
 	<head>
 		<title>{{page.title}}</title>
 		{% include commonHeadElements.html %}
-		<link rel="stylesheet" href="../../../css/posts.nest.sass.css">
+		<link rel="stylesheet" href="../../../css/posts.css">
 		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<script type="text/javascript" src="https://www.moonwards.com/js/tooltipster.bundle.min.js"></script>
